# gstreamer-hplugins

./: .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  README  cairoimageoverlay.c  client.c  configure.ac  crop.c  crop.h  device.c  device.h  facetracker.c  facetracker.h  gstreamer.c  hcvconv.c  hcverror.c  hcverror.h  hcvimage.h  hcvloop.c  hcvloop.h  hcvmemsrc.c  hcvmemsrc.h  huffman.h  jheader.c  jpegutils.c  jpegutils.h  kitten  kitten.c  kitten.in  model.h  negotiation.c  save.c  savejpeg.c  savepipe.c  skinfilter.c  skinfilter.h  skinmodel.h  skinmodel.m  (+3 more)
hcv/: __init__.py  trackerlaunch.py
src/: Makefile.am  cairoimageoverlay.c  gstreamer.c  livekeeper.c  livekeeper.h
